Bug 888300 - Respect dom.w3c_touch_events.enabled property on win32 widget. r=jimm